<resources>
    <string name="app_name">wizSuite Event</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="events">Events</string>
    <string name="notification">Notifications</string>
    <string name="support">Support</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="provide_registered_email">Please provide your registered email to get OTP</string>
    <string name="provide_registered_phone">Please provide your registered phone to get OTP</string>
    <string name="send_otp">Send OTP</string>
    <string name="new_password">New Password</string>
    <string name="set_new_password">Please set new password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign Up</string>
    <string name="sign_up_to_continue">Please sign up to continue</string>
    <string name="do_not_have_account">Don\'t have an account?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="old_events">Old Events</string>
    <string name="flight">Flight</string>
    <string name="cab">Cab</string>
    <string name="agenda">Agenda</string>
    <string name="venue">Venue</string>
    <string name="feedback">Feedback</string>
    <string name="contact">Contact</string>
    <string name="title_activity_event_details_new">EventDetailsNewActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="empty_email">Please provide email</string>
    <string name="empty_password">Please provide password</string>
    <string name="empty_confirm_password">Please provide confirm password</string>
    <string name="password_length">Password should be more then 6 characters</string>
    <string name="otp">OTP</string>
    <string name="otp_shared">OTP is shared on your registered Email</string>
    <string name="otp_shared_on_phone">OTP is shared on your registered Phone</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="do_not_receive_otp">Didn\'t receive OTP yet?</string>
    <string name="provide_valid_otp">Please provide valid OTP</string>
    <string name="confirm_password_not_match">Confirm password not match</string>
    <string name="flight_number">Flight Number</string>
    <string name="check_in">Check In</string>
    <string name="description">Description</string>
    <string name="cab_number">Cab Number : </string>
    <string name="pickup_point">Pickup Point</string>
    <string name="drop_point">Drop Point</string>
    <string name="venue_name">Venue Name</string>
    <string name="event_date">Event Date</string>
    <string name="venue_address">Address</string>
    <string name="call">Call</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="layover">Layover</string>
    <string name="view_your_venue">View Your Venue</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="t_shirt_size">T Shirt Size</string>
    <string name="govt_id">Govt ID</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signin">Sing In</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="empty_name">Please provide your full name</string>
    <string name="empty_phone">Please provide your valid phone number</string>
    <string name="empty_city">Please provide your city</string>
    <string name="agree_to_t_and_c">Please read and agree to our term and conditions by checking the button</string>
    <string name="login_with_otp">Login With OTP</string>
    <string name="or_login_with_otp">OR\nLogin With OTP</string>
    <string name="venue_address_link">Address Link</string>
    <string name="have_any_problem_tell_us">Have Any Problem? Tell Us</string>
    <string name="message">Message</string>
    <string name="empty_support_message">Please write issue you are facing.</string>
    <string name="change_password">Change Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="delete_account_head">Delete Account !</string>
    <string name="delete_account_body">Are you sure, you want to delete your account permanently?</string>
    <string name="logout_head">Logout !</string>
    <string name="logout_body">Are you sure, you want to logout?</string>
    <string name="_continue">Continue</string>
    <string name="_cancel">Cancel</string>
    <string name="agree">I agree to your</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="no_data_found">No data found</string>
    <string name="event_agenda">Event Agenda</string>


    <string-array name="t_shirt_size">
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXL</item>
    </string-array>

    <string-array name="govt_id">
        <item>Aadhar Card</item>
        <item>Driving Licence</item>
        <item>Passport</item>
        <item>Voter ID Card</item>
        <item>Ration Card</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="zero">0</string>
    <string name="_20_sec_remaining">20 Sec Remaining</string>

</resources>