<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_event_24"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_notifications_24"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_support_24"
            android:title="@string/support" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>