<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.wizsuite.event.ui.home.HomeFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.wizsuite.event.ui.gallery.NotificationsFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.wizsuite.event.ui.slideshow.SupportFragment"
        android:label="@string/support"
        tools:layout="@layout/fragment_support" />
</navigation>