<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="16dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.DayNight">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_toEndOf="@id/imageView"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:fontFamily="@font/roboto_black"
        android:layout_marginStart="15dp"
        android:textColor="@color/blue"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/txtUserEmail"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@id/imageView"
        android:layout_below="@id/txtUserName"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/roboto_medium"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/nav_header_subtitle" />
</RelativeLayout>